added proper routing structure, added with one auth example
