# services/server/api/modules/auth/auth.dto.go
@@ -1,0 +1,6 @@
+package auth
+
+
+type LogIn struct {
+	Name  string `json:"name"`
+}
